--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ python-multipart
 # AI & RAG
 langchain
 langchain-community
+langchain-core
 langchain-google-genai  # Use this if using Gemini
 # langchain-openai      # Uncomment if using OpenAI instead
 
